tests/samples/invalid/assign_array_view_to_variable.pn

fn main(data: []i32)
{
	var copy_of_data = data;
}
